syntax = "proto3";

option java_package = "net.iGap.proto";
option java_outer_classname = "ProtoChannelCreate";

message ChannelCreate {
    string name = 2;
    string description = 3;
    enum Device {
        None = 0;
    }
}

message ChannelCreateResponse {
    ChannelCreate CCC = 1;
    uint64 room_id = 2;
    string invite_link = 3;
}

service gg {
    rpc GetUser(ChannelCreate) returns (ChannelCreateResponse);
}


enum Content {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6;
}